# ATCS

./: .gitignore  README.md
ADT_more_examples/: ADTs_part_II  file.txt  main.cpp
ADTdemo/: CMakeLists.txt  main.cpp
Assassin/: CMakeLists.txt  main.cpp
BinaryTrees2022/: main.cpp
CampbellRooms2022/: CMakeLists.txt  main.cpp  rooms.txt
Celebrities2022/: Celebrities  Celebrity.cpp  Celebrity.h  celebrities.txt  main.cpp
CityGuessingGame2022/: CityGuessingGame  cities2.txt  cities3.txt  main.cpp
ExpressionTree/: main.cpp
HashTableMovieReviewer2022/: CMakeLists.txt  WordEntry.cpp  WordEntry.h  experimentmain.cpp  hashmain.cpp  moviemain.cpp  shphashtable.cpp  shphashtable.h
Huffman2022/: main.cpp  your_huffman_code.h
Implementing ADTs/: CMakeLists.txt  main.cpp  shpvector.cpp  shpvector.h
Johnson/: CMakeLists.txt  main.cpp
LinkedListDemo/: CMakeLists.txt  main.cpp
ML/: test.py
Markov/: CMakeLists.txt  main.cpp
MarkovChain2022/: MarkovChain  ip.txt  jerry.txt  main.cpp  potter.txt
MoreMapPractice/: main.cpp
Mystery/: CMakeLists.txt  main.cpp
Nifty C++ Tricks 2022/: CMakeLists.txt  LoudDog.cpp  main.cpp
OurSHPSetImplementation/: CMakeLists.txt  main.cpp  shpset.cpp  shpset.h
PokemonManager2022/: main.cpp  shortlist.txt  whatever.txt
Polynomials/: CMakeLists.txt  Poly.cpp  Poly.h  main.cpp
PrimsAlgorithm/: main.cpp
PriorityQueues/: CMakeLists.txt  main.cpp  shp_priority_queue.cpp  shp_priority_queue.h
Trie_example_2022/: Boggle  CMakeLists.txt  LexiconTest  SpellCheck  lexiconmain.cpp  shplexicon.cpp  shplexicon.h
War/: main.cpp  (+1 more)
(+25 files in other folders)
